<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="GetCookin">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="266dp"
        android:layout_height="98dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/available_recipes"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/center_button"
        android:layout_width="144dp"
        android:layout_height="76dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="541dp"
        android:layout_marginEnd="133dp"
        android:fontFamily="sans-serif"
        android:text="@string/recipe_book"
        app:backgroundTint="@color/orange_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/left_button"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:layout_marginTop="542dp"
        android:layout_marginEnd="278dp"
        android:fontFamily="sans-serif"
        android:text="@string/my_pantry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="138dp"
        android:layout_height="75dp"
        android:layout_marginStart="278dp"
        android:layout_marginTop="542dp"
        android:fontFamily="sans-serif"
        android:text="@string/my_recipes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/availableL"
        android:layout_width="354dp"
        android:layout_height="378dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="105dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="119dp"
        android:layout_height="106dp"
        android:contentDescription="cornucopia"
        android:src="@drawable/cornucopia"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="-1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>