<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyRecipes">

    <Button
        android:id="@+id/center_button"
        android:layout_width="144dp"
        android:layout_height="76dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="541dp"
        android:layout_marginEnd="133dp"
        android:text="@string/recipe_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/left_button"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:layout_marginTop="542dp"
        android:layout_marginEnd="278dp"
        android:text="@string/my_pantry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="138dp"
        android:layout_height="75dp"
        android:layout_marginStart="278dp"
        android:layout_marginTop="542dp"
        android:text="@string/my_recipes"
        app:backgroundTint="@color/orange_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="73dp"
        android:layout_height="77dp"
        android:layout_marginEnd="3dp"
        android:background="#00FFFFFF"
        android:text="+"
        android:textAlignment="center"
        android:textColor="@color/orange_700"
        android:textSize="48sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/recipeLayout"
        android:layout_width="357dp"
        android:layout_height="430dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="92dp"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <TextView
        android:id="@+id/prompt1"
        android:layout_width="301dp"
        android:layout_height="71dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/prompt1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>