<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPantry">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="318dp"
        android:layout_height="71dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/belleza"
        android:text="@string/my_pantry"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/center_button"
        android:layout_width="144dp"
        android:layout_height="76dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="541dp"
        android:layout_marginEnd="133dp"
        android:text="@string/recipe_book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/left_button"
        android:layout_width="135dp"
        android:layout_height="75dp"
        android:layout_marginTop="542dp"
        android:layout_marginEnd="278dp"
        android:text="@string/my_pantry"
        app:backgroundTint="@color/orange_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="138dp"
        android:layout_height="75dp"
        android:layout_marginStart="278dp"
        android:layout_marginTop="542dp"
        android:text="@string/my_recipes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="73dp"
        android:layout_height="77dp"
        android:layout_marginEnd="3dp"
        android:background="#00FFFFFF"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textColor="@color/orange_700"
        android:textSize="48sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/pantryLayout"
        android:layout_width="61dp"
        android:layout_height="336dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pantryLayout2"
        android:layout_width="171dp"
        android:layout_height="338dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="123dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <Button
        android:id="@+id/updatePantry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="476dp"
        android:text="Update Pantry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="101dp"
        android:layout_marginStart="6dp"
        android:src="@drawable/pumpkin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>